Fix overflow issues in mobile view

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ li {
 /* Landing page */
 
 .landing__background-image {
-  text-align: center;
+  text-align: left;
   background-image: url('assets/s1.jpg');
   background-size: cover;
   height: 90vh;
@@ -90,7 +90,7 @@ li {
   padding-top: 80px;
   position: absolute;
   top: 560px;
-  padding-right: 880px;
+  margin-right: 50%;
   padding-left: 32px;
   z-index: 3;
 }
@@ -209,12 +209,10 @@ li {
 
 /* Responsivity */
 
-@media only screen and (max-width: 1280) {
+@media only screen and (max-width: 1280px) {
   .landing__title {
     font-size: 2.3rem;
-    padding-top: 48rem;
-    top: 400px;
-    padding-right: 112px;
+    /* bottom: 120px; */
   }
   .navbar__items {
     width: 50%;
@@ -224,15 +222,13 @@ li {
 
 @media only screen and (max-width: 768px) {
   body {
-    overflow-x: hidden;
     font-size: 0.9rem;
+    overflow-x: hidden;
+    overflow-y: scroll;
   }
-  .about__title {
-    font-size: 2rem;
-  }
-  .offer__lead {
-    font-size: 1.1em;
-  }
+  /* header, main, .landing__background-image, .navbar, .navbar__items, section, div, body, html {
+    overflow-x: hidden;
+  } */
   .navbar__items {
     position: absolute;
     height: 90vh;
@@ -261,13 +257,16 @@ li {
     padding-right: 320px;
     padding-left: 32px;
   }
+  .about__title {
+    font-size: 2rem;
+  }
   .about__body {
     flex-direction: column;
   }
   .offer__lead {
+    font-size: 1.1em;
     display: inline-block;
     text-align: left;
-    /* padding: 2rem; */
     margin-left: 16px;
     margin-right: 24px;
   }
@@ -287,7 +286,7 @@ li {
   }
 }
 
-@media only screen and (min-width: 600px) and (max-height: 768px) {
+@media only screen and (min-width: 600px) and (max-height: 875px) {
   .landing__title {
     font-size: 2rem;
     padding-top: 48px;
@@ -300,14 +299,3 @@ li {
 .navbar--active {
   transform: translateX(-120vw);
 }
-/* .toggle .line1 {
-  transform: rotate(-45deg) translate(-4.5px, 8px);
-  transition: transform 0.1s linear;
-}
-.toggle .line2 {
-  opacity: 0;
-}
-.toggle .line3 {
-  transform: rotate(45deg) translate(-4.5px, -8px);
-  transition: transform 0.1s linear;
-} */
